display dynamically country

--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
 
 </head>
 <body>
-    <main>
-        <section>
-            
+    <header>
+        <h1 class="text-teal-500 font-semibold text-5xl font-style text-center my-5 ">All countries details in here</h1>
+    </header>
+    <main class="container mx-auto">
+        <section id="countries-container" class="22">
+            <div id="div-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                
+            </div>
         </section>
     </main>
     <script src="index.js"></script>
