--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         <h1 class="text-teal-500 font-semibold text-5xl font-style text-center my-5 ">All countries details in here</h1>
     </header>
     <main class="container mx-auto">
-        <section id="countries-container" class="22">
+        <section id="countries-container" >
+            <div id="singleCountryContainer">
+                
+            </div>
             <div id="div-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 
             </div>
